crates/ruff_python_parser/tests/snapshots/invalid_syntax@type_param_type_var_missing_default.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/type_param_type_var_missing_default.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..64,
        body: [
            TypeAlias(
                StmtTypeAlias {
                    node_index: NodeIndex(None),
                    range: 0..17,
                    name: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 5..6,
                            id: Name("X"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 6..11,
                            node_index: NodeIndex(None),
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        node_index: NodeIndex(None),
                                        range: 7..10,
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 7..8,
                                            node_index: NodeIndex(None),
                                        },
                                        lower_bound: None,
                                        bound: None,
                                        is_type_mapping: false,
                                        default: None,
                                        variance: None,
                                        is_reified: false,
                                        is_some_hole: false,
                                    },
                                ),
                            ],
                            separators: TypeParamSeparators {
                                positional_only_count: None,
                                keyword_only_start: None,
                                slash_range: None,
                                star_range: None,
                            },
                        },
                    ),
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 14..17,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                    cases: [],
                    is_private: false,
                },
            ),
            TypeAlias(
                StmtTypeAlias {
                    node_index: NodeIndex(None),
                    range: 18..40,
                    name: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 23..24,
                            id: Name("X"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 24..34,
                            node_index: NodeIndex(None),
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        node_index: NodeIndex(None),
                                        range: 25..33,
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 25..26,
                                            node_index: NodeIndex(None),
                                        },
                                        lower_bound: None,
                                        bound: Some(
                                            Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 28..31,
                                                    id: Name("int"),
                                                    ctx: Load,
                                                },
                                            ),
                                        ),
                                        is_type_mapping: false,
                                        default: None,
                                        variance: None,
                                        is_reified: false,
                                        is_some_hole: false,
                                    },
                                ),
                            ],
                            separators: TypeParamSeparators {
                                positional_only_count: None,
                                keyword_only_start: None,
                                slash_range: None,
                                star_range: None,
                            },
                        },
                    ),
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 37..40,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                    cases: [],
                    is_private: false,
                },
            ),
            TypeAlias(
                StmtTypeAlias {
                    node_index: NodeIndex(None),
                    range: 41..63,
                    name: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 46..47,
                            id: Name("X"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 47..57,
                            node_index: NodeIndex(None),
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        node_index: NodeIndex(None),
                                        range: 48..52,
                                        name: Identifier {
                                            id: Name("T1"),
                                            range: 48..50,
                                            node_index: NodeIndex(None),
                                        },
                                        lower_bound: None,
                                        bound: None,
                                        is_type_mapping: false,
                                        default: None,
                                        variance: None,
                                        is_reified: false,
                                        is_some_hole: false,
                                    },
                                ),
                                TypeVar(
                                    TypeParamTypeVar {
                                        node_index: NodeIndex(None),
                                        range: 54..56,
                                        name: Identifier {
                                            id: Name("T2"),
                                            range: 54..56,
                                            node_index: NodeIndex(None),
                                        },
                                        lower_bound: None,
                                        bound: None,
                                        is_type_mapping: false,
                                        default: None,
                                        variance: None,
                                        is_reified: false,
                                        is_some_hole: false,
                                    },
                                ),
                            ],
                            separators: TypeParamSeparators {
                                positional_only_count: None,
                                keyword_only_start: None,
                                slash_range: None,
                                star_range: None,
                            },
                        },
                    ),
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 60..63,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                    cases: [],
                    is_private: false,
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | type X[T =] = int
  |           ^ Syntax Error: Expected an expression
2 | type X[T: int =] = int
3 | type X[T1 =, T2] = int
  |


  |
1 | type X[T =] = int
2 | type X[T: int =] = int
  |                ^ Syntax Error: Expected an expression
3 | type X[T1 =, T2] = int
  |


  |
1 | type X[T =] = int
2 | type X[T: int =] = int
3 | type X[T1 =, T2] = int
  |            ^ Syntax Error: Expected an expression
  |
