crates/ruff_python_parser/tests/snapshots/invalid_syntax@type_param_type_var_tuple_invalid_default_expr.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/type_param_type_var_tuple_invalid_default_expr.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..147,
        body: [
            TypeAlias(
                StmtTypeAlias {
                    node_index: NodeIndex(None),
                    range: 0..24,
                    name: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 5..6,
                            id: Name("X"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 6..18,
                            node_index: NodeIndex(None),
                            type_params: [
                                TypeVarTuple(
                                    TypeParamTypeVarTuple {
                                        node_index: NodeIndex(None),
                                        range: 7..17,
                                        name: Identifier {
                                            id: Name("Ts"),
                                            range: 8..10,
                                            node_index: NodeIndex(None),
                                        },
                                        default: Some(
                                            Starred(
                                                ExprStarred {
                                                    node_index: NodeIndex(None),
                                                    range: 13..17,
                                                    value: Name(
                                                        ExprName {
                                                            node_index: NodeIndex(None),
                                                            range: 14..17,
                                                            id: Name("int"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    ctx: Load,
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            ],
                            separators: TypeParamSeparators {
                                positional_only_count: None,
                                keyword_only_start: None,
                                slash_range: None,
                                star_range: None,
                            },
                        },
                    ),
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 21..24,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                    is_private: false,
                },
            ),
            TypeAlias(
                StmtTypeAlias {
                    node_index: NodeIndex(None),
                    range: 25..56,
                    name: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 30..31,
                            id: Name("X"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 31..50,
                            node_index: NodeIndex(None),
                            type_params: [
                                TypeVarTuple(
                                    TypeParamTypeVarTuple {
                                        node_index: NodeIndex(None),
                                        range: 32..49,
                                        name: Identifier {
                                            id: Name("Ts"),
                                            range: 33..35,
                                            node_index: NodeIndex(None),
                                        },
                                        default: Some(
                                            Starred(
                                                ExprStarred {
                                                    node_index: NodeIndex(None),
                                                    range: 38..49,
                                                    value: BoolOp(
                                                        ExprBoolOp {
                                                            node_index: NodeIndex(None),
                                                            range: 39..49,
                                                            op: Or,
                                                            values: [
                                                                Name(
                                                                    ExprName {
                                                                        node_index: NodeIndex(None),
                                                                        range: 39..42,
                                                                        id: Name("int"),
                                                                        ctx: Load,
                                                                    },
                                                                ),
                                                                Name(
                                                                    ExprName {
                                                                        node_index: NodeIndex(None),
                                                                        range: 46..49,
                                                                        id: Name("str"),
                                                                        ctx: Load,
                                                                    },
                                                                ),
                                                            ],
                                                        },
                                                    ),
                                                    ctx: Load,
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            ],
                            separators: TypeParamSeparators {
                                positional_only_count: None,
                                keyword_only_start: None,
                                slash_range: None,
                                star_range: None,
                            },
                        },
                    ),
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 53..56,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                    is_private: false,
                },
            ),
            TypeAlias(
                StmtTypeAlias {
                    node_index: NodeIndex(None),
                    range: 57..84,
                    name: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 62..63,
                            id: Name("X"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 63..78,
                            node_index: NodeIndex(None),
                            type_params: [
                                TypeVarTuple(
                                    TypeParamTypeVarTuple {
                                        node_index: NodeIndex(None),
                                        range: 64..77,
                                        name: Identifier {
                                            id: Name("Ts"),
                                            range: 65..67,
                                            node_index: NodeIndex(None),
                                        },
                                        default: Some(
                                            Yield(
                                                ExprYield {
                                                    node_index: NodeIndex(None),
                                                    range: 70..77,
                                                    value: Some(
                                                        Name(
                                                            ExprName {
                                                                node_index: NodeIndex(None),
                                                                range: 76..77,
                                                                id: Name("x"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                    ),
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            ],
                            separators: TypeParamSeparators {
                                positional_only_count: None,
                                keyword_only_start: None,
                                slash_range: None,
                                star_range: None,
                            },
                        },
                    ),
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 81..84,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                    is_private: false,
                },
            ),
            TypeAlias(
                StmtTypeAlias {
                    node_index: NodeIndex(None),
                    range: 85..117,
                    name: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 90..91,
                            id: Name("X"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 91..111,
                            node_index: NodeIndex(None),
                            type_params: [
                                TypeVarTuple(
                                    TypeParamTypeVarTuple {
                                        node_index: NodeIndex(None),
                                        range: 92..110,
                                        name: Identifier {
                                            id: Name("Ts"),
                                            range: 93..95,
                                            node_index: NodeIndex(None),
                                        },
                                        default: Some(
                                            YieldFrom(
                                                ExprYieldFrom {
                                                    node_index: NodeIndex(None),
                                                    range: 98..110,
                                                    value: Name(
                                                        ExprName {
                                                            node_index: NodeIndex(None),
                                                            range: 109..110,
                                                            id: Name("x"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            ],
                            separators: TypeParamSeparators {
                                positional_only_count: None,
                                keyword_only_start: None,
                                slash_range: None,
                                star_range: None,
                            },
                        },
                    ),
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 114..117,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                    is_private: false,
                },
            ),
            TypeAlias(
                StmtTypeAlias {
                    node_index: NodeIndex(None),
                    range: 118..146,
                    name: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 123..124,
                            id: Name("X"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 124..140,
                            node_index: NodeIndex(None),
                            type_params: [
                                TypeVarTuple(
                                    TypeParamTypeVarTuple {
                                        node_index: NodeIndex(None),
                                        range: 125..132,
                                        name: Identifier {
                                            id: Name("Ts"),
                                            range: 126..128,
                                            node_index: NodeIndex(None),
                                        },
                                        default: Some(
                                            Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 131..132,
                                                    id: Name("x"),
                                                    ctx: Load,
                                                },
                                            ),
                                        ),
                                    },
                                ),
                                TypeVar(
                                    TypeParamTypeVar {
                                        node_index: NodeIndex(None),
                                        range: 136..139,
                                        name: Identifier {
                                            id: Name("int"),
                                            range: 136..139,
                                            node_index: NodeIndex(None),
                                        },
                                        lower_bound: None,
                                        bound: None,
                                        default: None,
                                        variance: None,
                                    },
                                ),
                            ],
                            separators: TypeParamSeparators {
                                positional_only_count: None,
                                keyword_only_start: None,
                                slash_range: None,
                                star_range: None,
                            },
                        },
                    ),
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 143..146,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                    is_private: false,
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | type X[*Ts = *int] = int
2 | type X[*Ts = *int or str] = int
  |               ^^^^^^^^^^ Syntax Error: Boolean expression cannot be used here
3 | type X[*Ts = yield x] = int
4 | type X[*Ts = yield from x] = int
  |


  |
1 | type X[*Ts = *int] = int
2 | type X[*Ts = *int or str] = int
3 | type X[*Ts = yield x] = int
  |              ^^^^^^^ Syntax Error: Yield expression cannot be used here
4 | type X[*Ts = yield from x] = int
5 | type X[*Ts = x := int] = int
  |


  |
2 | type X[*Ts = *int or str] = int
3 | type X[*Ts = yield x] = int
4 | type X[*Ts = yield from x] = int
  |              ^^^^^^^^^^^^ Syntax Error: Yield expression cannot be used here
5 | type X[*Ts = x := int] = int
  |


  |
3 | type X[*Ts = yield x] = int
4 | type X[*Ts = yield from x] = int
5 | type X[*Ts = x := int] = int
  |                ^^ Syntax Error: Expected `,`, found `:=`
  |


## Semantic Syntax Errors

  |
1 | type X[*Ts = *int] = int
2 | type X[*Ts = *int or str] = int
3 | type X[*Ts = yield x] = int
  |              ^^^^^^^ Syntax Error: yield expression cannot be used within a TypeVarTuple default
4 | type X[*Ts = yield from x] = int
5 | type X[*Ts = x := int] = int
  |


  |
2 | type X[*Ts = *int or str] = int
3 | type X[*Ts = yield x] = int
4 | type X[*Ts = yield from x] = int
  |              ^^^^^^^^^^^^ Syntax Error: yield expression cannot be used within a TypeVarTuple default
5 | type X[*Ts = x := int] = int
  |


  |
3 | type X[*Ts = yield x] = int
4 | type X[*Ts = yield from x] = int
5 | type X[*Ts = x := int] = int
  |                   ^^^ Syntax Error: non default type parameter `int` follows default type parameter
  |
